--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,5 +38,7 @@
         </div>
       <% } %>
     </div>
+
+    <p>Based on data from the Metropolitan Transportation Authority.</p>
   </div>
 </body>
