--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <style>
-    h1, h3 { text-align: center; }
+    h1, h3, h5 { text-align: center; }
     .Rapid { color: green; }
     .Frequent { color: orange; }
     .Degraded { color: red; }
@@ -16,6 +16,7 @@
 <body>
   <div class="container">
     <h1>subwayrt</h1>
+    <h5>Average subway wait times</h5>
 
     <div class="row">
       <% for (var lineCategory in lineCategories) { %>
