--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,5 +41,6 @@
     </div>
 
     <p>Based on data from the Metropolitan Transportation Authority.</p>
+    <p>Created by <a href="https://nybigboard.com">The Big Board</a>, a small NYC transit news site.</p>
   </div>
 </body>
