--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,16 @@
     .Frequent { color: orange; }
     .Degraded { color: red; }
   </style>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58452343-10"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-58452343-10');
+  </script>
 </head>
 
 <body>
